--- a/agricompra/src/Contacto.css
+++ b/agricompra/src/Contacto.css
@@ -3,19 +3,21 @@
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    max-width: 800px;
+    max-width: 900px; /* Aumenta el ancho máximo del contenedor */
     margin: 0 auto;
     text-align: center;
 }
 
 .contacto-info-container {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    flex-direction: row; /* Cambia la dirección del flex a fila */
+    justify-content: space-between; /* Distribuye el espacio entre los elementos */
+    align-items: flex-start; /* Alinea los elementos al inicio verticalmente */
 }
 
 .contacto-details {
-    max-width: 400px;
+    max-width: 100%;
+    flex: 1; /* Permite que el contenedor de detalles ocupe el espacio disponible */
 }
 
 .contacto-titulo {
@@ -29,7 +31,7 @@
     color: #555; /* Color del texto */
     font-size: 16px;
     margin-bottom: 10px;
-    text-align: justify;
+    text-align: center;
     margin: 0 auto;
     max-width: 600px;
 }
@@ -45,6 +47,9 @@
 
 .logo-container {
     margin: 0 20px;
+    flex: 1; /* Permite que el contenedor del logo ocupe el espacio disponible */
+    display: flex;
+    justify-content: center; /* Centra el logo horizontalmente */
 }
 
 .logo-image {
@@ -53,5 +58,10 @@
 }
 
 .map-container {
-    margin-top: 20px;
+    margin-top: 0; /* Elimina el margen superior */
+    width: 100%; /* Asegura que el mapa ocupe todo el ancho disponible */
+    display: flex;
+    justify-content: center; /* Centra el mapa horizontalmente */
+    flex: 1; /* Permite que el contenedor del mapa ocupe el espacio disponible */
+    align-items: center; /* Centra el mapa verticalmente */
 }
