--- a/agricompra/src/Contacto.css
+++ b/agricompra/src/Contacto.css
@@ -20,21 +20,20 @@
     flex: 1; /* Permite que el contenedor de detalles ocupe el espacio disponible */
 }
 
-.contacto-container h2 {
+.contacto-titulo {
     color: #333; /* Color del texto */
     margin-bottom: 20px;
+    border-bottom: 2px solid green;
+    padding-bottom: 10px;
 }
 
 .contacto-info {
     color: #555; /* Color del texto */
     font-size: 16px;
     margin-bottom: 10px;
-<<<<<<< HEAD
     text-align: center;
     margin: 0 auto;
     max-width: 600px;
-=======
->>>>>>> parent of f5a143c (Agregue apartado nosotros)
 }
 
 .contacto-link {
@@ -64,5 +63,4 @@
     display: flex;
     justify-content: center; /* Centra el mapa horizontalmente */
     flex: 1; /* Permite que el contenedor del mapa ocupe el espacio disponible */
-    align-items: center; /* Centra el mapa verticalmente */
 }
