Refactor estilos y estructura del componente de contacto

--- a/agricompra/src/Contacto.css
+++ b/agricompra/src/Contacto.css
@@ -20,18 +20,16 @@
     flex: 1; /* Permite que el contenedor de detalles ocupe el espacio disponible */
 }
 
-.contacto-titulo {
+.contacto-container h2 {
     color: #333; /* Color del texto */
     margin-bottom: 20px;
-    border-bottom: 2px solid green;
-    padding-bottom: 10px;
 }
 
 .contacto-info {
     color: #555; /* Color del texto */
     font-size: 16px;
     margin-bottom: 10px;
-    text-align: center;
+    text-align: justify;
     margin: 0 auto;
     max-width: 600px;
 }
