--- a/agricompra/src/Carrito.css
+++ b/agricompra/src/Carrito.css
@@ -2,10 +2,19 @@
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease;
+  margin: 0 20px;
+  flex: 1; /* Permite que el contenedor del logo ocupe el espacio disponible */
+  display: flex;
+  justify-content: center; /* Centra el logo horizontalmente */
 }
 
 .shoppingCartItemImage:hover {
   transform: scale(1.05);
+}
+
+.shoppingCartItemImage img {
+  max-width: 100%; /* Asegura que la imagen ocupe el ancho disponible */
+  height: auto;
 }
 
 .shoppingCartItemTitle {
@@ -13,12 +22,17 @@
   font-size: 1.2em;
   color: #333;
   margin-bottom: 5px;
+  max-width: 100%;
+  flex: 1; /* Permite que el contenedor de detalles ocupe el espacio disponible */
 }
 
 .shoppingCartItemPrice {
-  color: #00a650;
-  font-size: 1.1em;
-  font-weight: bold;
+  color: #555; /* Color del texto */
+  font-size: 16px;
+  margin-bottom: 10px;
+  text-align: justify;
+  margin: 0 auto;
+  max-width: 600px;
 }
 
 .shoppingCartItemQuantity {
@@ -31,17 +45,19 @@
 
 .shoppingCartItemRemoveButton {
   background-color: #ff1744;
-  color: white;
+  color: #007bff; /* Color del enlace */
   border: none;
   border-radius: 5px;
   padding: 5px 10px;
   cursor: pointer;
   transition: background-color 0.3s ease;
   font-size: 0.9em;
+  text-decoration: none;
 }
 
 .shoppingCartItemRemoveButton:hover {
   background-color: #d50000;
+  text-decoration: underline;
 }
 
 .shoppingCartItemsContainer {
@@ -54,6 +70,10 @@
   max-width: 400px;
   margin: 20px auto;
   text-align: center;
+  display: flex;
+  flex-direction: row; /* Cambia la dirección del flex a fila */
+  justify-content: space-between; /* Distribuye el espacio entre los elementos */
+  align-items: flex-start; /* Alinea los elementos al inicio verticalmente */
 }
 
 .shoppingCartItemsContainer tr {
@@ -95,10 +115,21 @@
   border-radius: 10px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   text-align: center;
+  background-color: #f0f8ff; /* Color de fondo */
+  max-width: 900px; /* Aumenta el ancho máximo del contenedor */
+}
+
+.shoppingCartContainer h2 {
+  color: #333; /* Color del texto */
+  margin-bottom: 20px;
 }
 
 .shoppingCartTotalContainer {
-  margin-top: 20px;
+  margin-top: 0; /* Elimina el margen superior */
+  width: 100%; /* Asegura que el mapa ocupe todo el ancho disponible */
+  display: flex;
+  justify-content: center; /* Centra el mapa horizontalmente */
+  flex: 1; /* Permite que el contenedor del mapa ocupe el espacio disponible */
 }
 
 .shoppingCartItemBuyButton {
