--- a/agricompra/src/Account.css
+++ b/agricompra/src/Account.css
@@ -1,21 +1,32 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
 .account-page {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
   padding: 2rem;
   font-family: 'Roboto', sans-serif;
+  height: 100vh;
+  background-color: #f0f0f0;
 }
 
 .account-info {
   text-align: center;
+  background: white;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.account-info h2 {
+  margin-bottom: 20px;
 }
 
 .account-info img {
   border-radius: 50%;
   margin-top: 1rem;
+  margin-bottom: 20px;
 }
 
 .custom-google-button {
@@ -32,5 +43,4 @@
 
 .custom-google-button:hover {
   background-color: #357ae8;
-  color: #FFD700;
 }
